[gd_scene load_steps=56 format=3 uid="uid://csmo5vadg3dh2"]

[ext_resource type="Texture2D" uid="uid://bg7eqhrupra7y" path="res://Sprites/StageObjects/Enemies/World1/giantEnemyBird.png" id="1_4pn0j"]
[ext_resource type="Texture2D" uid="uid://dyhu6arldpi3g" path="res://Sprites/StageObjects/Enemies/World1/giantEnemyBird_idle.png" id="2_a8dge"]
[ext_resource type="Texture2D" uid="uid://duct3h0ebsvin" path="res://Sprites/FX/kill.png" id="2_egyg7"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Enemies/FireBirdBehavior.gd" id="3_dh2xn"]
[ext_resource type="Texture2D" uid="uid://ca5857fvf8ppf" path="res://Sprites/StageObjects/Enemies/World1/giantEnemyBird_parried.png" id="3_equa7"]
[ext_resource type="AudioStream" uid="uid://din6nki5i6p8k" path="res://Sounds/sfx_birdAnticipation_1.wav" id="4_a78yg"]
[ext_resource type="AudioStream" uid="uid://wjrsl3usbs4g" path="res://Sounds/sfx_birdAnticipation_2.wav" id="5_13moe"]
[ext_resource type="AudioStream" uid="uid://b16oeu6nlos60" path="res://Sounds/sfx_birdAnticipation_3.wav" id="6_o58c3"]
[ext_resource type="AudioStream" uid="uid://cp2fx8wtsmqha" path="res://Sounds/sfx_birbAttack.wav" id="7_dvo7d"]
[ext_resource type="AudioStream" uid="uid://m6wr1540c8he" path="res://Sounds/sfx_birdFireKachin.wav" id="8_lwk08"]
[ext_resource type="AudioStream" uid="uid://bbvy2d4m02c0n" path="res://Sounds/sfx_kill.wav" id="9_7mqiq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dx6f0"]
atlas = ExtResource("1_4pn0j")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f1gk"]
atlas = ExtResource("1_4pn0j")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt4ni"]
atlas = ExtResource("1_4pn0j")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5r4k"]
atlas = ExtResource("2_egyg7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7athc"]
atlas = ExtResource("2_egyg7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv6k0"]
atlas = ExtResource("2_egyg7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptewh"]
atlas = ExtResource("2_egyg7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkj2x"]
atlas = ExtResource("2_egyg7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k24e1"]
atlas = ExtResource("2_egyg7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d4xr"]
atlas = ExtResource("2_egyg7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcmk3"]
atlas = ExtResource("2_egyg7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa1qb"]
atlas = ExtResource("2_egyg7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oecy"]
atlas = ExtResource("2_egyg7")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3tr1"]
atlas = ExtResource("2_egyg7")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y1ut"]
atlas = ExtResource("2_egyg7")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdpmm"]
atlas = ExtResource("2_egyg7")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8tw"]
atlas = ExtResource("2_egyg7")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u7io"]
atlas = ExtResource("2_egyg7")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeqt"]
atlas = ExtResource("2_egyg7")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdme2"]
atlas = ExtResource("2_egyg7")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eks3x"]
atlas = ExtResource("1_4pn0j")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeb8f"]
atlas = ExtResource("1_4pn0j")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_323ma"]
atlas = ExtResource("1_4pn0j")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf6md"]
atlas = ExtResource("1_4pn0j")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji54i"]
atlas = ExtResource("1_4pn0j")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc8og"]
atlas = ExtResource("1_4pn0j")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4y0h"]
atlas = ExtResource("1_4pn0j")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxklr"]
atlas = ExtResource("1_4pn0j")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu7x2"]
atlas = ExtResource("1_4pn0j")
region = Rect2(1408, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnk3x"]
atlas = ExtResource("2_a8dge")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egwbo"]
atlas = ExtResource("2_a8dge")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eu7h"]
atlas = ExtResource("2_a8dge")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e76q"]
atlas = ExtResource("2_a8dge")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uosng"]
atlas = ExtResource("2_a8dge")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u67wi"]
atlas = ExtResource("3_equa7")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_meo2c"]
atlas = ExtResource("3_equa7")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflqf"]
atlas = ExtResource("3_equa7")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkm6"]
atlas = ExtResource("3_equa7")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bliwk"]
atlas = ExtResource("3_equa7")
region = Rect2(512, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pycmn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx6f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f1gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt4ni")
}],
"loop": true,
"name": &"Anticipation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5r4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7athc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv6k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptewh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkj2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k24e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d4xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcmk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oecy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3tr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y1ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdpmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro8tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u7io")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdme2")
}],
"loop": false,
"name": &"Death",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eks3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeb8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_323ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf6md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji54i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc8og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4y0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxklr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu7x2")
}],
"loop": false,
"name": &"FireBreath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnk3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egwbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eu7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e76q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uosng")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u67wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meo2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwk")
}],
"loop": false,
"name": &"Parried",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ok5px"]
radius = 11.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwv1b"]
size = Vector2(29, 20)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yrn5q"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3i48d"]
size = Vector2(29, 33)

[node name="Bird" type="AnimatedSprite2D"]
clip_children = 2
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_pycmn")
animation = &"Idle"
autoplay = "Idle"
speed_scale = 2.0
script = ExtResource("3_dh2xn")

[node name="Anticipation1" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_a78yg")
volume_db = 4.0
max_distance = 300.0
attenuation = 0.258816
bus = &"SoundEffects"

[node name="Anticipation2" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_13moe")
volume_db = 4.0
max_distance = 300.0
attenuation = 0.258816
bus = &"SoundEffects"

[node name="Anticipation3" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_o58c3")
volume_db = 4.0
max_distance = 300.0
attenuation = 0.258816
bus = &"SoundEffects"

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("7_dvo7d")
volume_db = 2.0
max_distance = 300.0
attenuation = 0.258816
bus = &"SoundEffects"

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_7mqiq")
volume_db = 1.0
max_distance = 300.0
attenuation = 0.258816
bus = &"SoundEffects"

[node name="Kachin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_lwk08")
volume_db = -80.0
max_distance = 700.0
attenuation = 0.258816

[node name="enemyHitbox" type="Area2D" parent="."]
position = Vector2(-22, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHitbox"]
position = Vector2(-23, 19)
rotation = 1.5708
scale = Vector2(1.10756, 1.00001)
shape = SubResource("CapsuleShape2D_ok5px")
disabled = true

[node name="enemyHurtbox" type="Area2D" parent="."]
position = Vector2(-32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHurtbox"]
position = Vector2(33, 18)
shape = SubResource("RectangleShape2D_vwv1b")

[node name="HitEffect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_yrn5q")
offset_left = -41.0
offset_top = -21.0
offset_right = 52.0
offset_bottom = 49.0
mouse_filter = 2
color = Color(1, 0, 0.0666667, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, 16.5)
shape = SubResource("RectangleShape2D_3i48d")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="area_entered" from="enemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="body_entered" from="enemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="area_entered" from="enemyHurtbox" to="." method="_on_enemy_hurtbox_area_entered"]
[connection signal="body_entered" from="enemyHurtbox" to="." method="_on_enemy_hurtbox_body_entered"]
[connection signal="body_exited" from="enemyHurtbox" to="." method="_on_enemy_hurtbox_body_exited"]
